--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@appcominteractive/vue-paintable-screen",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Draw on any screen",
   "main": "dist/index.js",
-  "author": "Phlp <phil@capshake.com>",
+  "author": "Ph1p <phil@capshake.com>",
   "repository": "https://github.com/appcom-interactive/vue-paintable-screen.git",
   "contributors": [
     "Philip Stapelfeldt <p.stapelfeldt@appcom-interactive.de>"
