--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "3.10.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^2.11.2"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^2.11.2",
     "html-webpack-plugin": "^3.2.0"
   }
 }
