--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@appcominteractive/vue-paintable-screen",
   "version": "0.3.1",
   "description": "Draw on any screen",
+  "keywords": ["canvas", "vue", "paintable"],
   "main": "dist/index.js",
   "author": "Ph1p <phil@capshake.com>",
   "repository": "https://github.com/appcom-interactive/vue-paintable-screen.git",
