--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@appcominteractive/vue-paintable-screen",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Draw on any screen",
-  "keywords": ["canvas", "vue", "paintable"],
+  "keywords": [
+    "canvas",
+    "vue",
+    "paintable"
+  ],
   "main": "dist/index.js",
   "author": "Ph1p <phil@capshake.com>",
   "repository": "https://github.com/appcom-interactive/vue-paintable-screen.git",
