--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server -d --open --progress --public --host 0.0.0.0",
-    "start": "NODE_ENV=production webpack --config webpack.config.js"
+    "dev": "./node_modules/.bin/webpack-dev-server -d --open --progress --public --host 0.0.0.0",
+    "start": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.js"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
