--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-paintable-screen",
+  "name": "vue-paintable",
   "version": "0.4.1",
   "description": "Draw on any screen",
   "keywords": [
@@ -9,7 +9,7 @@
   ],
   "main": "dist/index.js",
   "author": "Ph1p <phil@capshake.com>",
-  "repository": "https://github.com/ph1p/vue-paintable-screen.git",
+  "repository": "https://github.com/ph1p/vue-paintable.git",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
