--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.4",
-    "node-sass": "^4.8.3",
+    "lint-staged": "^7.1.2",
+    "node-sass": "^4.9.0",
     "postcss-color-function": "^3.0.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
@@ -45,8 +46,7 @@
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "3.10.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^2.11.2",
-    "html-webpack-plugin": "^3.2.0"
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^2.11.2"
   }
 }
