Update travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
+dist: trusty
 notifications:
   email: false
+
 language: node_js
-  node_js: 9
-  install:
-    - npm install
-  script:
-    - npm start
+
+node_js:
+  - "9"
+
+install:
+  - npm install
+
+script:
+  - npm start
