--- a/package.json
+++ b/package.json
@@ -29,27 +29,37 @@
     "start": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.js",
     "prepublish": "npm start"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "css-loader": "^0.28.11",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.2",
-    "node-sass": "^4.9.0",
-    "postcss-color-function": "^3.0.0",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-import": "^9.1.0",
-    "sass-loader": "^7.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "node-sass": "^4.11.0",
+    "postcss-color-function": "^4.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "vue": "^2.5.16",
-    "vue-cli": "^2.8.1",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "3.10.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^2.11.2"
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "vue": "^2.5.21",
+    "vue-cli": "^2.9.6",
+    "vue-loader": "^15.5.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "@babel/polyfill": "^7.2.5"
   }
 }
