build(travis): update travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,18 @@ dist: trusty
 notifications:
   email: false
 
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
 language: node_js
 
 node_js:
   - "9"
 
 install:
-  - npm install
+  - yarn install
 
 script:
-  - npm start
+  - yarn now-build
