--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "touch",
     "mouse"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ph1p/vue-paintable"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build-fallback": "FALLBACK=true vue-cli-service build --mode production --target lib --name fallback ./src/plugin.ts",
