--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --mode production --target lib --name paintable ./src/plugin.ts && rm ./dist/demo.html",
-    "now-build": "yarn build && vue-cli-service build ./src/main.ts --dest ./demo",
+    "build": "vue-cli-service build --mode production --target lib --name paintable ./src/plugin.js && rm ./dist/demo.html",
+    "now-build": "yarn build && vue-cli-service build ./src/main.js --dest ./demo",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -32,20 +32,16 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
-    "@types/jest": "^23.1.4",
     "@vue/cli-plugin-eslint": "^3.6.0",
-    "@vue/cli-plugin-typescript": "^3.6.0",
     "@vue/cli-plugin-unit-jest": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "ts-jest": "^23.0.0",
-    "typescript": "^3.4.3",
     "vue-template-compiler": "^2.5.21"
   },
   "prettier": {
@@ -58,14 +54,10 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "@vue/prettier",
-      "@vue/typescript"
+      "@vue/prettier"
     ],
     "rules": {
       "no-console": 0
-    },
-    "parserOptions": {
-      "parser": "@typescript-eslint/parser"
     }
   },
   "postcss": {
@@ -90,7 +82,7 @@
     "transform": {
       "^.+\\.vue$": "vue-jest",
       ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
-      "^.+\\.tsx?$": "ts-jest"
+      "^.+\\.jsx?$": "ts-jest"
     },
     "transformIgnorePatterns": [
       "/node_modules/"
