--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "url": "https://github.com/ph1p/vue-paintable"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "yarn build && vue-cli-service serve",
     "build": "vue-cli-service build --mode production --target lib --name paintable ./src/plugin.js && rm ./dist/demo.html",
+    "postbuild":"node ./scripts/set-eslint-ignores.js",
     "now-build": "yarn build && vue-cli-service build ./src/main.js --dest ./demo",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
@@ -29,10 +30,7 @@
     "dist/paintable.umd.js"
   ],
   "devDependencies": {
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-plugin-unit-jest": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
@@ -42,6 +40,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "ts-jest": "^23.0.0",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
+    "vue-property-decorator": "^8.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "prettier": {
