--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     ]
   },
   "gitHooks": {
-    "pre-commit": "yarn now-build && git add dist && lint-staged"
+    "pre-commit": "yarn build && git add dist && lint-staged"
   },
   "lint-staged": {
     "./src/*.{js,vue}": [
