--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^8.2.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "lint-staged": "^9.2.0",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "eslint-plugin-prettier": "^3.1.0"
   },
   "prettier": {
     "singleQuote": true
